# gf2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md
crates/gf2-coding/: BENCHMARK_OVERNIGHT.md  Cargo.toml  README.md  ROADMAP.md  benchmark_quick.sh  benchmark_threads.sh  perf.data  perf.data.old  run_overnight_benchmarks.sh
crates/gf2-coding/benches/: allocation_optimization.rs  batch_operations.rs  bch_parallel.rs  ldpc_throughput.rs  linear_codes.rs  llr_simd.rs  parallel_scaling.rs  profile_ldpc_decode.rs  profile_ldpc_encode.rs  quick_parallel.rs  sparse_preprocessing.rs
crates/gf2-coding/docs/: ALLOCATION_OPTIMIZATION_TDD_PLAN.md  ALLOCATION_PROFILING_REPORT.md  DVB_T2.md  DVB_T2_BCH_PLAN.md  DVB_T2_BCH_Polynomials.txt  DVB_T2_DESIGN.md  DVB_T2_MATRICES.md  DVB_T2_THROUGHPUT_REQUIREMENTS.md  DVB_T2_VERIFICATION_PLAN.md  DVB_T2_VERIFICATION_STATUS.md  DVB_test_vectors.md  GAUSS_ELIMINATION_MIGRATION_PLAN.md  HELPERS_FOR_GF2_CORE.md  LDPC_BASELINE_PERFORMANCE.md  LDPC_ENCODING_PHASE1_COMPLETE.md  LDPC_ENCODING_PLAN.md  LDPC_LLR_F32_MIGRATION.md  LDPC_PARITY_CHECK_ISSUE.md  LDPC_PERFORMANCE.md  LDPC_PERFORMANCE_PLAN.md  LDPC_PROFILING_RESULTS.md  LDPC_VERIFICATION_TESTS.md  OPTIMIZATION_ACTION_PLAN.md  PARALLELIZATION.md  PARALLELIZATION_PROGRESS.md  PARALLELIZATION_STRATEGY.md  PARALLEL_BENCHMARKING.md  README.md  REVERSED_CONVERSION_MIGRATION.md  SDR_INTEGRATION.md  SESSION_2025_11_27.md  SESSION_2025_11_28.md  SIMD_PERFORMANCE_GUIDE.md  SYSTEMATIC_ENCODING_CONVENTION.md
crates/gf2-coding/docs/archive/: QUALITY_AUDIT_PLAN.md  QUALITY_AUDIT_REPORT.md
crates/gf2-coding/examples/: awgn_uncoded.rs  benchmark_sparse_preprocessing.rs  block_code_intro.rs  dvb_t2_bch_demo.rs  dvb_t2_ldpc_basic.rs  generator_from_parity_check.rs  hamming_7_4.rs  hamming_basic.rs  ldpc_awgn.rs  ldpc_cache_file_io.rs  ldpc_encoding_with_cache.rs  llr_operations.rs  nasa_rate_half_k3.rs  qc_ldpc_demo.rs  visualize_large_matrices.rs
crates/gf2-coding/src/: bch.rs  channel.rs  convolutional.rs  ldpc.rs  lib.rs  linear.rs  llr.rs  simulation.rs  traits.rs
crates/gf2-coding/src/bch/: core.rs  mod.rs
crates/gf2-coding/src/ldpc/: core.rs  mod.rs  nr_5g.rs
crates/gf2-coding/tests/: backend_integration.rs  bch_primitive_verification.rs  bch_tests.rs  channel_capacity.rs  dvb_t2_bch_verification.rs  dvb_t2_ldpc_tests.rs  dvb_t2_ldpc_verification.rs  dvb_t2_ldpc_verification_suite.rs  ldpc_cache_io.rs  ldpc_encoding_tests.rs  ldpc_first_parity_bits_debug.rs  ldpc_parity_bit_analysis.rs  ldpc_simd_validation.rs  ldpc_systematic_encoding.rs  ldpc_validation.rs  linear_codes_integration.rs  llr_simd_integration.rs  qc_ldpc_tests.rs  sparse_dual_ldpc.rs  sparse_ldpc_compatibility.rs  test_vector_parser.rs  uncoded_ber_baseline.rs  verify_cached_generator.rs
crates/gf2-coding/tests/test_vectors/: config.rs  loader.rs  mod.rs  parser.rs
crates/gf2-core/: .gitignore  Cargo.toml  README.md  REQUIRED_FEATURES.md  ROADMAP.md  libshift_simd.rlib
crates/gf2-core/benches/: BENCHMARK_RESULTS.md  bitvec.rs  field_clone.rs  fp_montgomery.rs  generation.rs  m4rm_components.rs  m4rm_profile.rs  matmul.rs  matrix_inversion.rs  matrix_vector.rs  polar.rs  polynomial.rs  primitive_poly.rs  random.rs  rank_select.rs  rref.rs  rref_profile.rs  scan.rs  shifts.rs  simd_vs_scalar.rs  sparse.rs  wide_logical.rs
crates/gf2-core/benchmarks-cpp/: CMakeLists.txt  bench_flint_poly.cpp  bench_m4ri_gauss.cpp  bench_m4ri_matrix.cpp  bench_m4ri_matvec.cpp  bench_ntl_field.cpp
crates/gf2-core/docs/: BENCHMARKS.md  BENCHMARK_RESULTS_SIMD_VS_SCALAR.md  COMPUTE_BACKEND_DESIGN.md  FILE_IO_DESIGN.md  GF2M.md  GF2M_DESIGN.md  GF2M_POLY_UTILITIES_REQUIREMENTS.md  GF2M_SESSION_NOTES.md  GF2M_THREAD_SAFETY_REQUIREMENTS.md  KERNEL_OPTIMIZATION.md  PHASE12_SUMMARY.md  POLAR_IMPLEMENTATION_PLAN.md  POLY_UTILITIES_PERFORMANCE.md  PRIMITIVE_POLYNOMIALS.md  QUALITY_AUDIT_PLAN.md  QUALITY_AUDIT_REPORT.md  README.md  RREF_DESIGN_PLAN.md  RREF_SIMD_NOTES.md  SPARSE_DEDUP_DESIGN.md  SPARSE_MATRIX_REQUIREMENTS.md  SYNC_SOLUTION_COMPARISON.md  benchmarking_methodology.md  performance_session_notes.md  phase9_2_implementation_plan.md  phase9_3_benchmark_results.md  phase9_3_complete.md  phase9_3bc_results.md  phase9_4_implementation_plan.md  polynomial_benchmarks.md  rank_select_performance.md
crates/gf2-core/docs/archive/: DOCUMENTATION_AUDIT_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  GF2M_SESSION_NOTES.md  PHASE11_IMPLEMENTATION_PLAN.md  phase9_4_implementation_plan.md
crates/gf2-core/examples/: bitvec_basics.rs  debug_select.rs  helper_methods_demo.rs  matrix_basics.rs  primitive_polynomial_verification.rs  primitive_polynomial_warning.rs  random_generation.rs  sparse_display.rs  test_rank_select.rs  test_select_large.rs  visualize_matrix.rs
crates/gf2-core/scripts/: sage_benchmarks.py  validate_generation.sage
crates/gf2-core/src/: bitslice.rs  bitvec.rs  bitvec_sync_tests.rs  gf2m.rs  lib.rs  macros.rs  matrix.rs  primitive_polys.rs  sparse.rs
crates/gf2-core/src/alg/: gauss.rs  m4rm.rs  mod.rs  rref.rs
crates/gf2-core/src/compute/: backend.rs  batch_tests.rs  cpu.rs  mod.rs
crates/gf2-core/src/field/: axiom_tests.rs  mod.rs  traits.rs
crates/gf2-core/src/gf2m/: field.rs  generation.rs  mod.rs  mul_raw.rs  thread_safety_tests.rs  uint_ext.rs
crates/gf2-core/src/gfp/: mod.rs  montgomery.rs
crates/gf2-core/src/gfpn/: cubic.rs  ext_config.rs  mod.rs  quadratic.rs
crates/gf2-core/src/io/: bitvec.rs  error.rs  format.rs  formats.rs  (+4 more)
crates/gf2-core/tests/: backend_selection.rs  bitmatrix_macro.rs  inversion.rs  matmul.rs  matrix.rs  matrix_vector.rs  mul_operator.rs  polar_tests.rs  primitive_warnings.rs  property_tests.rs  random_generation.rs  rank_select_proptests.rs  rref_comprehensive.rs  sparse.rs  sparse_conversion.rs  sparse_dense_image_equivalence.rs  sparse_display.rs  sparse_dual.rs  sparse_iter_transpose.rs  sparse_proptests.rs  sparse_visualization_tests.rs  visualization_tests.rs
crates/gf2-kernels-simd/: Cargo.toml
crates/gf2-kernels-simd/src/: gf2m.rs  lib.rs  llr.rs
(+374 files in other folders)
