[package]
name = "gf2-coding"
version = "0.1.0"
edition = "2021"
authors = ["copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>"]
description = "Error-correcting code constructions and compression research built on gf2-core"
keywords = ["coding-theory", "compression", "gf2"]
categories = ["algorithms", "encoding", "mathematics"]
rust-version = "1.74"

[dependencies]
gf2-core = { path = "../gf2-core" }
rand = { workspace = true }
rand_distr = "0.4"

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[features]
default = []
simd = ["gf2-core/simd"]

[[bench]]
name = "linear_codes"
harness = false
