[package]
name = "gf2-coding"
version = "0.1.0"
edition = "2021"
authors = ["copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>"]
description = "Error-correcting code constructions and compression research built on gf2-core"
keywords = ["coding-theory", "compression", "gf2"]
categories = ["algorithms", "encoding", "mathematics"]
rust-version = "1.74"

[dependencies]
gf2-core = { path = "../gf2-core" }
gf2-kernels-simd = { path = "../gf2-kernels-simd", optional = true }
rand = { workspace = true }
rand_distr = "0.4"
rayon = { workspace = true, optional = true }
once_cell = "1.19"

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
tempfile = "3.8"
thiserror = "1.0"
num_cpus = "1.17.0"

[features]
default = ["simd"]
simd = ["gf2-core/simd", "gf2-kernels-simd"]
parallel = ["dep:rayon", "gf2-core/parallel"]
visualization = ["gf2-core/visualization"]
# Use f64 precision for LLRs instead of f32 (slower, for research/comparison)
llr-f64 = []

# Binaries are auto-discovered in src/bin/
# - generate_ldpc_cache: Generate DVB-T2 LDPC encoding cache files
# - validate_ldpc_cache: Comprehensive LDPC validation with error correction
# - check_encoding: Quick encoding sanity check

[[bench]]
name = "linear_codes"
harness = false

[[bench]]
name = "sparse_preprocessing"
harness = false

[[bench]]
name = "ldpc_throughput"
harness = false

[[bench]]
name = "profile_ldpc_encode"
harness = false

[[bench]]
name = "profile_ldpc_decode"
harness = false

[[bench]]
name = "batch_operations"
harness = false

[[bench]]
name = "quick_parallel"
harness = false

[[bench]]
name = "bch_parallel"
harness = false

[[bench]]
name = "llr_simd"
harness = false

[[bench]]
name = "allocation_optimization"
harness = false
