[package]
name = "gf2-core"
version = "0.1.0"
edition = "2021"
authors = ["copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>"]
description = "High-performance bit string manipulation primitives over GF(2)"
keywords = ["bitset", "gf2", "bitvec", "galois-field"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]
rust-version = "1.74"

[dependencies]
gf2-kernels-simd = { path = "../gf2-kernels-simd", optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["rand"]
# Opt-in to SIMD accelerated kernels via optional crate.
simd = ["gf2-kernels-simd"]
# Random generation functions (enabled by default for testing/examples).
rand = ["dep:rand"]

[[bench]]
name = "bitvec"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "wide_logical"
harness = false

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "random"
harness = false
required-features = ["rand"]

[[bench]]
name = "sparse"
harness = false
required-features = ["rand"]

[[bench]]
name = "polynomial"
harness = false

[[bench]]
name = "shifts"
harness = false

[[bench]]
name = "rank_select"
harness = false

[[bench]]
name = "polar"
harness = false
