[package]
name = "gf2-core"
version = "0.1.0"
edition = "2021"
authors = ["copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>"]
description = "High-performance bit string manipulation primitives over GF(2)"
keywords = ["bitset", "gf2", "bitvec", "galois-field"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]
rust-version = "1.80"

[dependencies]
gf2-kernels-simd = { path = "../gf2-kernels-simd", optional = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["rand", "io"]
# Opt-in to SIMD accelerated kernels via optional crate.
simd = ["gf2-kernels-simd"]
# Random generation functions (enabled by default for testing/examples).
rand = ["dep:rand"]
# Parallel algorithms with rayon
parallel = ["dep:rayon"]
# Matrix visualization to PNG images.
visualization = ["image"]
# File I/O support
io = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "bitvec"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "wide_logical"
harness = false

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "random"
harness = false
required-features = ["rand"]

[[bench]]
name = "sparse"
harness = false
required-features = ["rand"]

[[bench]]
name = "polynomial"
harness = false

[[bench]]
name = "shifts"
harness = false

[[bench]]
name = "rank_select"
harness = false

[[bench]]
name = "polar"
harness = false

[[bench]]
name = "primitive_poly"
harness = false

[[bench]]
name = "generation"
harness = false

[[bench]]
name = "simd_vs_scalar"
harness = false

[[bench]]
name = "matrix_inversion"
harness = false

[[bench]]
name = "m4rm_profile"
harness = false

[[bench]]
name = "m4rm_components"
harness = false

[[bench]]
name = "rref"
harness = false

[[bench]]
name = "rref_profile"
harness = false

[[bench]]
name = "matrix_vector"
harness = false
required-features = ["rand"]
